Fixed overlap problem through use of scrollOverflow

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -53,11 +53,6 @@ h1, h2, h3{
     margin-bottom: 24px;
 }
 
-.col-md-12 {
-    padding-left: 0;
-    padding-right: 0
-}
-
 /* Text */
 
 p {
